<resources>
    <string name="app_name">观察者</string>
    <string name="app_name_full">观察者网</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">分享</string>
    <string name="share_app">欢迎体验新的观察者网\nhttp://fir.im/guanchazhe</string>
    <string name="share_news">分享-来自观察者网\n</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_channel_manage">ChannelManageActivity</string>
    <string name="title_activity_favorite_channel">FavoriteChannelActivity</string>
    <string name="title_activity_commentary_detail">CommentaryDetailActivity</string>
    <string name="title_activity_image_detail">ImageDetailActivity</string>
    <string name="title_activity_news_web_view">NewsWebViewActivity</string>
    <string name="title_activity_author_list">AuthorListActivity</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="title_activity_commentary_list">CommentaryListActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_user_comment">UserCommentActivity</string>


    <string name="view_error_message">This content is not available offline.</string>
    <string name="my_channels">我的频道</string>
    <string name="more_channels">更多频道</string>
    <string name="all_authors">专栏作家</string>
    <string name="favorite_channels">喜爱栏目</string>
    <string name="setting">设置</string>
    <string name="night_mode">夜间模式</string>
    <string name="about">关于</string>
    <string name="update">检查更新</string>

    <string name="new_version_name">新版本号</string>
    <string name="update_info">更新内容</string>
    <string name="not_remind">不再提示</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="update_success">已是最新版本</string>
    <string name="update_fail">检查失败,请确认网络</string>

    <string name="download_title">观察者新版本下载</string>
    <string name="need_permission">请确认权限</string>



    <string name="channel_manage">栏目设置</string>
    <string name="author_column">专栏</string>
    <string name="image_detail">图片详情</string>
    <string name="old_news">旧闻</string>
    <string name="user_comment">网友评论</string>
    <string name="confirm_exit">再次点击退出应用</string>
    <string name="clear_cache">缓存已清除</string>
    <string name="channels_tips">Tips:\n1. 左右两边频道均可上下滑动以查看更多\n2. 长按频道按钮后上下拖动可对频道进行排序\n3. 对频道按钮左右滑动可管理频道\n4. 部分机型可能崩溃,请谅解</string>


    <!--about-->
    <string name="about_app_name_with_introduce">NBAPlus - 最专注的NBA信息平台</string>
    <string name="about_introduce">观察者网介绍</string>
    <string name="introduce">观察者网（www.guancha.cn）携手上海春秋发展战略研究院，旨在为全球华人读者提供集新鲜、热点、深度、趣味于一体的时政资讯。\n\n中国关怀全球视野\n从这里读懂世界\n独立而负责任</string>
    <string name="contact_to_me">联系作者</string>
    <string name="email">ranzhang.su@outlook.com\n\n此应用为个人作品，所有版权属于观察者网或原作者，如有侵权，请速联系作者，反馈或提出建议，也欢迎联系</string>
    <string name="current_version">当前版本</string>
    <string name="version">1.0.0</string>
    <string name="notices">开源协议</string>
    <string name="open_source">Apache Licence 2.0</string>

    <!--array-->
    <string-array name="channel_name">
        <item>政治</item>
        <item>军事</item>
        <item>财经</item>
        <item>文化</item>
        <item>周边</item>
        <item>历史</item>
        <item>区域</item>
        <item>社会</item>
        <item>北美</item>
        <item>欧洲</item>
        <item>科技</item>
        <item>产业</item>
        <item>传媒</item>
        <item>工程</item>
        <item>亚非拉</item>
        <item>体育</item>
        <item>生活</item>
        <item>教育</item>
        <item>战略</item>
    </string-array>

    <string-array name="text_size">
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

</resources>
