<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/description"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_channel_tips"
        android:layout_alignParentBottom="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:scrollbars="none">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/channels_tips"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_small"
                android:lineSpacingExtra="@dimen/spacing_small"/>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/channels"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        android:layout_above="@+id/description">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/spacing_normal"
                android:gravity="center"
                android:text="@string/my_channels"/>

            <View
                android:layout_margin="@dimen/spacing_small"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_divier_line"
                android:background="@color/divider"/>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/spacing_small"
                android:layout_marginRight="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:layout_marginBottom="@dimen/spacing_tiny"
                android:foreground="?attr/selectableItemBackground"
                tools:cardCornerRadius="@dimen/margin_4dp"
                tools:cardElevation="@dimen/elevation_small">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/favorite_recycleview"
                        style="@style/CollectionView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/gray.light"
                        tools:listitem="@layout/item_channel"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/spacing_normal"
            android:gravity="center"
            android:text="@string/more_channels"/>

        <View
            android:layout_margin="@dimen/spacing_small"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_divier_line"
            android:background="@color/divider"/>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/spacing_small"
            android:layout_marginRight="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_marginBottom="@dimen/spacing_tiny"
            android:foreground="?attr/selectableItemBackground"
            tools:cardCornerRadius="@dimen/margin_4dp"
            tools:cardElevation="@dimen/elevation_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/other_recycleview"
                    style="@style/CollectionView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray.light"
                    tools:listitem="@layout/item_channel"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
