<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/activity_main_content" />

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/include_view_navigation_header" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/drawer_recycler"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_drawer_recycleview"
                android:layout_marginBottom="@dimen/spacing_tiny"
                android:layout_marginTop="@dimen/spacing_small"
                style="@style/CollectionView"/>

            <View
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginRight="@dimen/spacing_normal"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_divier_line"
                android:background="@color/divider"/>

            <RelativeLayout
                android:id="@+id/authors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:paddingLeft="@dimen/spacing_normal"
                android:background="@drawable/item_background">

                <ImageView
                    android:id="@+id/authors_image"
                    android:layout_width="@dimen/height_setting_icon"
                    android:layout_height="@dimen/height_setting_icon"
                    android:scaleType="centerInside"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:src="@drawable/def_avatar"/>

                <TextView
                    android:id="@+id/authors_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_setting_icon"
                    android:layout_toRightOf="@+id/authors_image"
                    android:layout_marginLeft="@dimen/spacing_huge"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/black"
                    android:text="@string/all_authors"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/channels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:paddingLeft="@dimen/spacing_normal"
                android:background="@drawable/item_background">

                <ImageView
                    android:id="@+id/channels_image"
                    android:layout_width="@dimen/height_setting_icon"
                    android:layout_height="@dimen/height_setting_icon"
                    android:scaleType="centerInside"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:src="@drawable/def_avatar"/>

                <TextView
                    android:id="@+id/channels_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_setting_icon"
                    android:layout_toRightOf="@+id/channels_image"
                    android:layout_marginLeft="@dimen/spacing_huge"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/black"
                    android:text="@string/favorite_channels"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:paddingLeft="@dimen/spacing_normal"
                android:background="@drawable/item_background">

                <ImageView
                    android:id="@+id/setting_image"
                    android:layout_width="@dimen/height_setting_icon"
                    android:layout_height="@dimen/height_setting_icon"
                    android:scaleType="centerInside"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:src="@drawable/def_avatar"/>

                <TextView
                    android:id="@+id/setting_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_setting_icon"
                    android:layout_toRightOf="@+id/setting_image"
                    android:layout_marginLeft="@dimen/spacing_huge"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/black"
                    android:text="@string/setting"/>

            </RelativeLayout>

            <!--<RelativeLayout-->
                <!--android:id="@+id/nightMode"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="@dimen/spacing_normal"-->
                <!--android:paddingLeft="@dimen/spacing_normal"-->
                <!--android:background="@drawable/item_background">-->

                <!--<ImageView-->
                    <!--android:id="@+id/nightMode_image"-->
                    <!--android:layout_width="@dimen/height_setting_icon"-->
                    <!--android:layout_height="@dimen/height_setting_icon"-->
                    <!--android:scaleType="centerInside"-->
                    <!--android:layout_alignParentLeft="true"-->
                    <!--android:gravity="center"-->
                    <!--android:src="@drawable/def_avatar"/>-->

                <!--<TextView-->
                    <!--android:id="@+id/nightMode_text"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="@dimen/height_setting_icon"-->
                    <!--android:layout_toRightOf="@+id/nightMode_image"-->
                    <!--android:layout_marginLeft="@dimen/spacing_huge"-->
                    <!--android:gravity="center"-->
                    <!--android:textSize="@dimen/text_size_small"-->
                    <!--android:textColor="@color/black"-->
                    <!--android:text="@string/night_mode"/>-->

                <!--</RelativeLayout>-->

            <RelativeLayout
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:paddingLeft="@dimen/spacing_normal"
                android:background="@drawable/item_background">
                
                <ImageView
                    android:id="@+id/about_image"
                    android:layout_width="@dimen/height_setting_icon"
                    android:layout_height="@dimen/height_setting_icon"
                    android:scaleType="centerInside"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:src="@drawable/def_avatar"/>

                <TextView
                    android:id="@+id/about_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_setting_icon"
                    android:layout_toRightOf="@+id/about_image"
                    android:layout_marginLeft="@dimen/spacing_huge"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/black"
                    android:text="@string/about"/>

            </RelativeLayout>

        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>